Started in on notebook file function one.

--- a/Assignment_Wiese_Python.ipynb
+++ b/Assignment_Wiese_Python.ipynb
@@ -2,12 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing just to ensure this is working properly, as I've had issues with jupyter.\n",
+    "print('Hello World')        # As per the norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Going to get around to make sure the standard things and the things Dr. X suggested are set up before we begin\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import urllib\n",
+    "from Bio import SeqIO\n",
+    "from Bio.Data import CodonTable"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function 1\n",
+    "\n",
+    "# First step, declaring the function.  Only one variable, fasta_fn.\n",
+    "def get_sequences_from_file(fasta_fn):\n",
+    "    sequence_data_dict = {}          # Creation of empty dictionary for our sequence data\n",
+    "    for record in SeqIO.parse(fasta_fn, \"fasta\"):\n",
+    "        description = record.description.split()\n",
+    "        species_name = description[1] + \" \" + description[2]\n",
+    "        sequence_data_dict[species_name] = record.seq\n",
+    "    return(sequence_data_dict)"
+   ]
   }
  ],
  "metadata": {
